<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".ui.registration.RegistrationFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/waves"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/RegistrationText"
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
        android:text="@string/registration_title"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        style="@style/EmailEditText"
        android:id="@+id/editTextPhone"
        android:inputType="phone"
        android:autofillHints="@string/phone_number"
        android:hint="@string/phone_number"
        android:maxLength="10"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/phoneEditTitle"
        style="@style/RegTitle"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/errorText"
        style="@style/RegistrationText"
        android:layout_marginTop="16dp"
        android:text="@string/phone_error"
        android:textColor="@color/registration_error_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <View
        android:id="@+id/noErrorOffsetView"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@+id/errorText" />

    <Button
        android:id="@+id/submitButton"
        style="@style/SubmitButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/noErrorOffsetView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonRegistration"
        style="@style/SubmitButton"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="Registration"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>